# copilot-study

./: CMakeLists.txt  README.md
FactoryPattern/: Camera.cpp  CameraFactory.cpp  Gnss.cpp  GnssFactory.cpp  Lidar.cpp  LidarFactory.cpp  Sensor.cpp  SensorFactory.cpp  test_SensorFactory.cpp
ObserverAndAbstractFactoryPattern/: main.cpp  test.pu  test_main.cpp
abstractFactoryPattern/: CameraPropertyFactory.cpp  test_CameraPropertyFactory.cpp
observerPattern/: ChatServer.cpp  ChatServer.h  Client.cpp  Subscriber.h  User.cpp  User.h
src/: main.cpp  test_Client.cpp  test_main1.cpp
test/: test.cpp
